# src/routes/mission.js
@@ -5,6 +5,7 @@ import Event from '../services/events/index.js';
 import ImpactPoints from '../services/impact_points/index.js';
 import {loginRequired} from '../utils/middlewares/authorization.js';
 import Analytics from '../services/analytics/index.js';
+import {validate} from '@socious/data';
 
 import {
   checkIdParams,
@@ -48,6 +49,41 @@ router.post(
 );
 
 router.post(
+  '/:id/submitworks',
+  loginRequired,
+  checkIdParams,
+  assignee,
+  async (ctx) => {
+    await validate.SubmitWorkSchema.validateAsync(ctx.request.body);
+
+    await Mission.submitWork({
+      ...ctx.request.body,
+      mission_id: ctx.mission.id,
+      project_id: ctx.mission.project_id,
+    });
+    ctx.body = {
+      message: 'success',
+    };
+
+    Event.push(Event.Types.NOTIFICATION, ctx.mission.project.identity_id, {
+      type: Notif.Types.PROJECT_COMPLETE,
+      refId: ctx.mission.id,
+      parentId: ctx.mission.project.id,
+      identity: ctx.identity,
+    });
+
+    Analytics.track({
+      userId: ctx.user.id,
+      event: 'submit_work',
+      meta: {
+        ...ctx.mission,
+        submitted_work: ctx.request.body,
+      },
+    });
+  },
+);
+
+router.post(
   '/:id/confirm',
   loginRequired,
   checkIdParams,
@@ -73,6 +109,37 @@ router.post(
       userId: ctx.mission.assignee_id,
       event: 'confirmed_mission',
       meta: ctx.mission,
+    });
+  },
+);
+
+router.post(
+  '/:id/confirm/:work_id',
+  loginRequired,
+  checkIdParams,
+  assigner,
+  async (ctx) => {
+    await Mission.confirmWork(ctx.params.work_id);
+    ctx.body = {
+      message: 'success',
+    };
+
+    Event.push(Event.Types.NOTIFICATION, ctx.mission.assignee_id, {
+      type: Notif.Types.ASSIGNER_CONFIRMED,
+      refId: ctx.mission.id,
+      parentId: ctx.mission.project.id,
+      identity: ctx.identity,
+    });
+
+    ImpactPoints.calculate(ctx.mission);
+
+    Analytics.track({
+      userId: ctx.user.id,
+      event: 'confirm_work',
+      meta: {
+        ...ctx.mission,
+        submitted_work: ctx.request.body,
+      },
     });
   },
 );
